recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:49: error: expected start of definition
	override def run() {
                 ^SquareKoch:52: error: Unmatched closing brace '}' ignored here
}
^